# frontend-visualization

./: .babelrc  .env.dev  .env.production  .env.test  .eslintrc.js  .gitignore  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  tsconfig.node.json  vite.config.ts  vite.config.ts.timestamp-1736316776615-26868e578bbcd.mjs  vite.config.ts.timestamp-1737783800287-f43554845df24.mjs
lib/browser/: ObjModelLoaderHack.ts
lib/browser/tiff2png/: UTIF.js  example.ts
lib/common/: path.ts  pathC.ts  tga2png.ts
lib/common/FileReader/: index.js
lib/common/utils/: unique.ts
lib/nodejs/: fs.ts
lib/nodejs/fbx2glb/: loader.ts
lib/nodejs/obj2gltf/: ArrayStorage.js  getBufferPadded.js  gltfToGlb.js  index.js
lib/nodejs/objLoader/: MtlFileLoader.ts  ObjFileLoader.ts  tsconfig.json
lib/nodejs/zip/: AdmZip.ts
plugins/NodePolyFillsPlugin/: index.ts
scripts/managePage/: index.js
scripts/managePage/template/: App.vue  main.ts
src/lib/babylon-helper/: AxesHelper.ts  GridHelper.ts  index.ts
src/lib/fbx2glb/: loader.ts
src/lib/obj2gltf/: Texture.js  createGltf.js  getJsonBufferPadded.js  loadMtl.js  loadObj.js  loadTexture.js  outsideDirectory.js  readLines.js  writeGltf.js
src/lib/tiff2png/: UPNG.js
src/pages/mbabylon/: App.vue  TestFbxLoader.ts  csgjs.cpp  data.ts  emcc.js  emcc.wasm  glTFLoaderHack.ts  rr.ts
src/pages/mbabylon/webworker/: data2.ts  (+1 more)
static/temp/: single.fbx
static/temp/csg-cpp/: CMakeLists.txt  csgjs1.cpp  data.json
static/temp/csgjs-cpp-master-1/: cmd.txt  csg.js  csgjs.cpp  csgjs1.cpp  csgjs2.cpp
(+11 files in other folders)
